hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0007.hl
val h=5;
h++;//error